@@ -1,3 +1,13 @@
+2002-04-04  Daniel Jacobowitz  <drow@mvista.com>
+
+	Merge from trunk:
+
+	2002-03-17  Daniel Jacobowitz  <drow@mvista.com>
+
+        * dbxread.c (process_one_symbol): Extend the first N_SLINE
+        in a function to cover the entire beginning of the function
+        as well if it does not already.
+
 2002-04-04  Michal Ludvig  <mludvig@suse.cz>
 
 	* x86-64-linux-nat.c (child_xfer_memory): x86-64 ptrace() ABI 
